--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -9,8 +9,10 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "reactstrap": "^9.2.2",
