--- a/src/api/vercel.json
+++ b/src/api/vercel.json
@@ -9,7 +9,7 @@
             }
         }
     ],
-    "routes": [{ "src": "/(.*)", "dest": "main.py" }],
+    "routes": [{ "src": "/(.*)", "dest": "/main.py" }],
     "env": {
         "APP_MODULE": "main:app"
     }
