--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -3,33 +3,49 @@ anyio==4.4.0
 certifi==2024.2.2
 click==8.1.7
 colorama==0.4.6
+contourpy==1.2.1
+cycler==0.12.1
 dnspython==2.6.1
 email_validator==2.1.1
 exceptiongroup==1.2.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
+fonttools==4.52.4
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.4
+kiwisolver==1.4.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib==3.9.0
 mdurl==0.1.2
+networkx==3.3
+numpy==1.26.4
 orjson==3.10.3
+packaging==24.0
+pandas==2.2.2
+pillow==10.3.0
 pydantic==2.7.2
 pydantic_core==2.18.3
 Pygments==2.18.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
 rich==13.7.1
+scipy==1.13.1
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 starlette==0.37.2
 typer==0.12.3
 typing_extensions==4.12.0
+tzdata==2024.1
 ujson==5.10.0
 uvicorn==0.30.0
 watchfiles==0.22.0
